# callm

./: Cargo.toml  LICENSE  README.md
src/: device.rs  error.rs  lib.rs  loaders.rs  models.rs  pipelines.rs  templates.rs  utils.rs
src/loaders/: gguf.rs  safetensors.rs
src/loaders/gguf/: llama.rs
src/models/: gemma.rs  llama.rs  llama_quantized.rs  mistral.rs  phi3.rs  qwen2.rs  qwen2_quantized.rs
src/pipelines/: text.rs
src/templates/: dummy.rs  jinja.rs
tests/: template_jinja_llama.rs  template_jinja_mistral.rs  template_jinja_phi3.rs  template_jinja_qwen2.rs
